# IoT-connecting

./: CMakeLists.txt
ass4-pico2mqtt/: .env  .gitignore  CMakeLists.txt  JsonParser.cpp  JsonParser.h  MQTTConnection.cpp  MQTTConnection.h  MQTTService.cpp  MQTTService.h  main.cpp
ass4-pico2mqtt/mqtt-server/: index.html  index.js  message.json  package-lock.json
part1_blinkyD2/: CMakeLists.txt  main.cpp
part2_multiblinky/: CMakeLists.txt  main.cpp
part3_ssd1306/: CMakeLists.txt  OLEDDisplay.cpp  OLEDDisplay.h  Untitled.h  main.cpp
